Fix HTML and body height and overflow settings for improved layout

--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -12,7 +12,10 @@ a {
   -webkit-tap-highlight-color: transparent;
 }
 
-html {
+html,
+body {
+  height: 100%;
+  overflow: hidden;
   scroll-behavior: smooth;
 }
 
